# correspondchess

./: .gitignore  Cargo.toml  README.md  WS.md
json/: create-game.json  player-move-1.json  player-move-2.json  player-move-3.json  player-move-4.json
migrations/2020-06-08-164551_init/: down.sql  up.sql
src/: api.rs  chess.rs  main.rs  models.rs  schema.rs  webapp.rs  wsserver.rs  wssession.rs
static/: index.html
static/css/: correspondchess.css
static/js/: correspondchess.js  random-names.js
