[package]
name = "correspondchess"
version = "0.1.0"
authors = ["James McGill <jbmcgill@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.11"
dotenv = "0.15.0"
diesel = { version = "1.4.4", features = ["sqlite", "r2d2", "numeric"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shakmaty = "0.16.3"
