[package]
name = "correspondchess"
version = "0.1.0"
authors = ["James McGill <jbmcgill@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
actix = "0.9.0"
actix-web-actors = "2.0.0"
actix-files = "0.2.1"
chrono = "0.4.11"
dotenv = "0.15.0"
diesel = { version = "1.4.4", features = ["sqlite", "r2d2", "numeric"] }
futures = "0.3.1"
harsh = "0.2.0"
r2d2 = "0.8"
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shakmaty = "0.16.3"
tokio = { version = "0.2.21", features = ["sync"] }
